Avanzo con el procesamiento de datos en telegram

--- a/telegram-data/data_collect.ipynb
+++ b/telegram-data/data_collect.ipynb
@@ -1932,7 +1932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 129,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1941,12 +1941,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 141,
       "metadata": {},
       "outputs": [],
       "source": [
         "# OpenAIEmbeddingGenerator instance\n",
         "embedding_generator = OpenAIEmbeddingGenerator(env_file_path=env_path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 143,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "embedding_generator.OPENAI_GPT_MODEL=\"gpt-3.5-turbo\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 144,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'gpt-3.5-turbo'"
+            ]
+          },
+          "execution_count": 144,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "embedding_generator.get_openai_gpt_model()"
       ]
     },
     {
@@ -2142,7 +2171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 146,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2160,7 +2189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 147,
       "metadata": {},
       "outputs": [
         {
@@ -2195,27 +2224,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 148,
       "metadata": {},
       "outputs": [
         {
-          "ename": "KeyError",
-          "evalue": "'Could not automatically map 3.5 to a tokeniser. Please use `tiktoken.get_encoding` to explicitly get the tokeniser you expect.'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[127], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m n_tokens \u001b[39m=\u001b[39m embedding_generator\u001b[39m.\u001b[39;49mcount_tokens()\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mNumber of tokens -> \u001b[39m\u001b[39m{\u001b[39;00mn_tokens\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-            "File \u001b[0;32m~/.local/lib/python3.8/site-packages/osintgpt/embeddings/openai_embeddings.py:108\u001b[0m, in \u001b[0;36mOpenAIEmbeddingGenerator.count_tokens\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[39m# get model\u001b[39;00m\n\u001b[1;32m    107\u001b[0m model \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_openai_gpt_model()\n\u001b[0;32m--> 108\u001b[0m encoding \u001b[39m=\u001b[39m tiktoken\u001b[39m.\u001b[39;49mencoding_for_model(model)\n\u001b[1;32m    110\u001b[0m \u001b[39m# count tokens\u001b[39;00m\n\u001b[1;32m    111\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_tokens \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
-            "File \u001b[0;32m~/.local/lib/python3.8/site-packages/tiktoken/model.py:97\u001b[0m, in \u001b[0;36mencoding_for_model\u001b[0;34m(model_name)\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mencoding_for_model\u001b[39m(model_name: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Encoding:\n\u001b[1;32m     93\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Returns the encoding used by a model.\u001b[39;00m\n\u001b[1;32m     94\u001b[0m \n\u001b[1;32m     95\u001b[0m \u001b[39m    Raises a KeyError if the model name is not recognised.\u001b[39;00m\n\u001b[1;32m     96\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 97\u001b[0m     \u001b[39mreturn\u001b[39;00m get_encoding(encoding_name_for_model(model_name))\n",
-            "File \u001b[0;32m~/.local/lib/python3.8/site-packages/tiktoken/model.py:84\u001b[0m, in \u001b[0;36mencoding_name_for_model\u001b[0;34m(model_name)\u001b[0m\n\u001b[1;32m     81\u001b[0m             \u001b[39mreturn\u001b[39;00m model_encoding_name\n\u001b[1;32m     83\u001b[0m \u001b[39mif\u001b[39;00m encoding_name \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 84\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\n\u001b[1;32m     85\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCould not automatically map \u001b[39m\u001b[39m{\u001b[39;00mmodel_name\u001b[39m}\u001b[39;00m\u001b[39m to a tokeniser. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     86\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mPlease use `tiktoken.get_encoding` to explicitly get the tokeniser you expect.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     87\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m     89\u001b[0m \u001b[39mreturn\u001b[39;00m encoding_name\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'Could not automatically map 3.5 to a tokeniser. Please use `tiktoken.get_encoding` to explicitly get the tokeniser you expect.'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of tokens -> 627756\n"
           ]
         }
       ],
       "source": [
         "n_tokens = embedding_generator.count_tokens()\n",
         "print (f'Number of tokens -> {n_tokens}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "\n",
+        "*Costo estimado del Embedding*\n",
+        "\n",
+        "- `embedding_generator.calculate_embeddings_estimated_cost()`: Este metodo calcula el cosoto estimado asociado a generar el embedding de los textos.\n",
+        "- Por default, `osintgpt` usa *Ada v2* embedding model.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "| Model   | Usage               |\n",
+        "|---------|---------------------|\n",
+        "| Ada v2  | $0.0001 / 1K tokens |\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 149,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.0627756\n"
+          ]
+        }
+      ],
+      "source": [
+        "estimated_cost = embedding_generator.calculate_embeddings_estimated_cost()\n",
+        "print (estimated_cost)"
       ]
     }
   ],
