--- a/sentiment-analysis/data-anaylisis.ipynb
+++ b/sentiment-analysis/data-anaylisis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "[158 rows x 15 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "[7219 rows x 7 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,6 +682,39 @@
     "df = create_sentiment_dataframe(\"data/2012/general-train-tagged-3l.xml\")\n",
     "df\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "topics\n",
+      "política           3120\n",
+      "otros              2337\n",
+      "entretenimiento    1678\n",
+      "economía            942\n",
+      "música              566\n",
+      "fútbol              252\n",
+      "cine                245\n",
+      "tecnología          217\n",
+      "deportes            113\n",
+      "literatura          103\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_topicos= df.explode('topics')\n",
+    "\n",
+    "conteo_topicos = df_topicos['topics'].value_counts()\n",
+    "\n",
+    "# Mostrar el resultado\n",
+    "print(conteo_topicos)"
    ]
   },
   {
@@ -703,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +928,7 @@
        "[2500 rows x 7 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,6 +936,29 @@
    "source": [
     "politics_df = create_sentiment_dataframe(\"data/2013/politics-test-tagged.xml\")\n",
     "politics_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "topics\n",
+      "política    2500\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "politics_topics= politics_df.explode('topics')\n",
+    "\n",
+    "cant_politic_topics = politics_topics['topics'].value_counts()\n",
+    "\n",
+    "print(cant_politic_topics )"
    ]
   },
   {
@@ -926,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1148,7 @@
        "[1773 rows x 3 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1307,7 @@
        "[784 rows x 3 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1565,7 @@
        "[777 rows x 6 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1757,7 @@
        "[390 rows x 6 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1956,7 @@
        "[1008 rows x 6 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1912,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2148,7 @@
        "[506 rows x 6 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2347,7 @@
        "[966 rows x 6 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2303,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2539,7 @@
        "[498 rows x 6 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2502,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2682,7 +2738,7 @@
        "[943 rows x 6 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2694,7 +2750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2874,7 +2930,7 @@
        "[486 rows x 6 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2893,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3073,7 +3129,7 @@
        "[989 rows x 6 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3085,7 +3141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3265,7 +3321,7 @@
        "[510 rows x 6 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3299,7 +3355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3417,7 +3473,7 @@
        "[5886 rows x 3 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3429,7 +3485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3547,7 +3603,7 @@
        "[857 rows x 3 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
