Value counts de emociones

--- a/sentiment-analysis/data-anaylisis.ipynb
+++ b/sentiment-analysis/data-anaylisis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3355,7 +3355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3473,7 +3473,7 @@
        "[5886 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3485,7 +3485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3603,7 +3603,7 @@
        "[857 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3611,6 +3611,181 @@
    "source": [
     "emotions_dev = pd.read_csv(\"data/2020/dev.tsv\", sep='\\t')\n",
     "emotions_dev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>tweet</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-Spoiler- Nadie ha tenido el dilema de tener q...</td>\n",
+       "      <td>others</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Yo solo quiero saber donde esta HASHTAG? HASHT...</td>\n",
+       "      <td>others</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>La literatura nos hace más empáticos, dispuest...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Para mi, estas son las 4 mejores escenas de es...</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Lo que acabo de ver es puro oro. Historia de l...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6738</th>\n",
+       "      <td>5882</td>\n",
+       "      <td>Pequeños gestos que puedes hacer por el medio ...</td>\n",
+       "      <td>others</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6739</th>\n",
+       "      <td>5883</td>\n",
+       "      <td>¿Sabías que de las dos coronaciones que se cel...</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6740</th>\n",
+       "      <td>5884</td>\n",
+       "      <td>Mientras reflexionamos sobre lo duro que es es...</td>\n",
+       "      <td>anger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6741</th>\n",
+       "      <td>5885</td>\n",
+       "      <td>La fachada de la catedral de Notre Dame fue “s...</td>\n",
+       "      <td>sadness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6742</th>\n",
+       "      <td>5886</td>\n",
+       "      <td>Estaba sufriendo el Barsa pero si tienes a Mes...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6743 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                              tweet     label \n",
+       "0        1  -Spoiler- Nadie ha tenido el dilema de tener q...    others \n",
+       "1        2  Yo solo quiero saber donde esta HASHTAG? HASHT...    others \n",
+       "2        3  La literatura nos hace más empáticos, dispuest...       joy \n",
+       "3        4  Para mi, estas son las 4 mejores escenas de es...  surprise \n",
+       "4        5  Lo que acabo de ver es puro oro. Historia de l...       joy \n",
+       "...    ...                                                ...        ...\n",
+       "6738  5882  Pequeños gestos que puedes hacer por el medio ...    others \n",
+       "6739  5883  ¿Sabías que de las dos coronaciones que se cel...  surprise \n",
+       "6740  5884  Mientras reflexionamos sobre lo duro que es es...     anger \n",
+       "6741  5885  La fachada de la catedral de Notre Dame fue “s...   sadness \n",
+       "6742  5886  Estaba sufriendo el Barsa pero si tienes a Mes...       joy \n",
+       "\n",
+       "[6743 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_union = pd.concat([emotions_dev, emotions_train], ignore_index=True)\n",
+    "df_union"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['id', 'tweet', 'label '], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_union.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label \n",
+       "others       3310\n",
+       "joy          1455\n",
+       "sadness       809\n",
+       "anger         687\n",
+       "surprise      276\n",
+       "disgust       129\n",
+       "fear           77\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_union[\"label \"].value_counts()"
    ]
   }
  ],
