--- a/factChecking.ipynb
+++ b/factChecking.ipynb
@@ -15146,11 +15146,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_newtral_without_duplicates.to_csv('newtral.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rating\n",
+       "Falso              464\n",
+       "Engañoso           442\n",
+       "Verdad a medias    141\n",
+       "Verdadero           13\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_newtral_without_duplicates['rating'].value_counts()"
    ]
   }
  ],
